# MediaMorphosis-API

./: Cargo.toml
client/: README.md  package-lock.json
client/public/: index.html
client/src/: App.js  Documentation.js  MMwebpage.html  app.html
client/src/api/: API.js
client/src/routes/: +page.svelte
server/: Cargo.toml  certificate.pem  nopass.pem
server/src/: converter.rs  main.rs  routes.rs  utils.rs
src/: main.rs  utils.rs
