[package]
name = "MediaMorphosis-API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"   
actix-cors = "0.6"
futures-util = "0.3"
actix-multipart = "0.6.1"
infer = "0.15.0"
ferris-says = "0.3.1"
actix-web = { version = "4", features = ["openssl"] }
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]